--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,34 @@
-<div class="ui menu">
-  <div class="ui container">
-    <a [routerLink]="['/']"class="header item">Home</a>
-    <a [routerLink]="['/people/edit']"class="header item">Edit</a>
-    <a [routerLink]="['/people/create']"class="header item">Create</a>
+<nav id="navbar" class="navbar navbar-expand-sm navbar-dark p-0">
+  <div class="container">
+    <a id="brand" [routerLink]="['/']" class="navbar-brand pull-left">Welcome</a>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown mr-3">
+          <a id="brand" [routerLink]="['/list']" class="nav-link">
+            <i class="fas fa-user"></i> Manage
+          </a>
+        </li>
+        <li class="nav-item">
+          <a id="brand" href="#" class="nav-link">
+            <i class="fas fa-user-times"></i> Logout
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<header id="animate-area" class="py-2 text-white p-0 mb-3">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+        </div>
+      </div>
+    </div>
+  </header>
+<div class="row mx-md-n5">
+  <div class="container">
+    <router-outlet></router-outlet>
   </div>
 </div>
-<div class="">
-  <router-outlet></router-outlet>
-</div>
+
+<div class=""></div>
