--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face{font-family: Comfortaa; src: url('./fonts/Comfortaa-Regular.ttf')}
+body{
+  font-family: Comfortaa;
+  background-color: #C0DFED;
+  
+}
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
