--- a/src/app/people/inspect/inspect.component.html
+++ b/src/app/people/inspect/inspect.component.html
@@ -14,12 +14,11 @@
     <tbody>
         <tr>
           <td>{{data.id}}</td>
-          <td>{{data.userId}}</td>
-          <td>{{data.title}}</td>
-          <td>{{data.completed}}</td>
+          <td>{{data.name}}</td>
+          <td>{{data.docID}}</td>
+          <td>{{data.docType}}</td>
           <td>asd</td>
         </tr>
     </tbody>
   </table>
-
 </div>
