--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,44 +1,78 @@
-#navbar{
-  background-color: #8EC1DA;
+.menu-spacer {
+  flex: 1 1 auto;
 }
-#brand{
-  color:gray
+mat-toolbar {
+  background-color: #8ec1da;
 }
- #formCreateUser{
-  background-color: #D5D8DC;
-  border: none;
+.nav-link {
+  text-decoration: none;
+  color: gray;
+}
+.side-menu-link {
+  text-decoration: none;
+  color: white;
+}
+
+mat-sidenav-content {
+  background-color: #c0dfed;
+}
+mat-sidenav {
+  background-color: #9477bc;
+}
+.menu {
+  color: #9477bc;
 }
 
 @keyframes animatedBackground {
-	0% { background-position: 0 0; }
-	100% { background-position: -300px 0; }
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: -300px 0;
+  }
 }
 @-moz-keyframes animatedBackground {
-	0% { background-position: 0 0; }
-	100% { background-position: -300px 0; }
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: -300px 0;
+  }
 }
 @-webkit-keyframes animatedBackground {
-	0% { background-position: 0 0; }
-	100% { background-position: -300px 0; }
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: -300px 0;
+  }
 }
 @-ms-keyframes animatedBackground {
-	0% { background-position: 0 0; }
-	100% { background-position: -300px 0; }
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: -300px 0;
+  }
 }
 @-o-keyframes animatedBackground {
-	0% { background-position: 0 0; }
-	100% { background-position: -300px 0; }
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: -300px 0;
+  }
 }
 
 #animate-area {
-	width: 100%;
-	height: 80px;
-	background-image: url('../img/clouds.png');
-	background-position: 0px 0px;
+  width: 100%;
+  height: 80px;
+  background-image: url("../img/clouds.png");
+  background-position: 0px 0px;
 
-	animation: animatedBackground 15s linear infinite;
-	-moz-animation: animatedBackground 15s linear infinite;
-	-webkit-animation: animatedBackground 15s linear infinite;
-	-ms-animation: animatedBackground 15s linear infinite;
-	-o-animation: animatedBackground 15s linear infinite;
+  animation: animatedBackground 15s linear infinite;
+  -moz-animation: animatedBackground 15s linear infinite;
+  -webkit-animation: animatedBackground 15s linear infinite;
+  -ms-animation: animatedBackground 15s linear infinite;
+  -o-animation: animatedBackground 15s linear infinite;
 }
