--- a/src/app/people/list/list.component.html
+++ b/src/app/people/list/list.component.html
@@ -1,4 +1,4 @@
-<section id="post" >
+<section id="post" class="container p-4">
 <mat-form-field>
     <input class="search" matInput (keyup)="onChange($event.target.value)" placeholder="Search">
   </mat-form-field>
