--- a/src/app/people/inspect/inspect.component.scss
+++ b/src/app/people/inspect/inspect.component.scss
@@ -4,12 +4,6 @@
   grid-template-columns: 33% 34% 33%;
 }
 
-.cont2 {
-  display: grid;
-  grid-auto-columns: repeat(2, 1fr);
-  grid-template-columns: 50% 50%;
-}
-
 .but1 {
   grid-column: 1;
 
@@ -34,12 +28,9 @@
 .attributes2{
   font-weight: bold;
 }
-.elem1{
-  grid-column: 1;
-}
 
 .elem2 {
-  grid-column: 2;
+  margin-left: 25px;
 }
 
 .mat-list-it {
