--- a/src/app/people/list/list.component.html
+++ b/src/app/people/list/list.component.html
@@ -4,6 +4,7 @@
   </mat-form-field>
   <div class="options">
   <button class="buttons" style="align-content: flex-end">create new</button>
+  <button class="buttons" style="align-content: flex-end" [routerLink]="['/kinships/list']">list kinship</button>
 </div>
 
   <mat-paginator [pageSizeOptions]="[10, 15, 20, 25]" showFirstLastButtons></mat-paginator>
