Continuing with List kinship

--- a/src/app/kinships/create/create.component.html
+++ b/src/app/kinships/create/create.component.html
@@ -4,10 +4,19 @@
   </div>
 
   <div id ="divForm">
-    <div>1</div>
-    <div>2</div>
+    <div class="px-2">
+      <mat-card>
+        <mat-card-subtitle>Person</mat-card-subtitle>
+      </mat-card>
+    </div>
+    <div class="px-2">
+      <mat-card>
+        <mat-card-subtitle>Relative</mat-card-subtitle>
+      </mat-card>
+    </div>
     <div>
-      <mat-form-field appearance="fill" class="large-input">
+      <mat-form-field
+       class="large-input">
         <mat-label>Kinship</mat-label>
         <mat-select>
           <mat-option value="Father">Father</mat-option>
