--- a/src/app/kinships/list/list.component.html
+++ b/src/app/kinships/list/list.component.html
@@ -1,99 +1,48 @@
 <section id="post" class="container p-4">
   <mat-form-field>
-    <input
-      class="search"
-      matInput (keyup)="onChange($event.target.value)"
-      placeholder="Search"
-    />
-  </mat-form-field>
-  <div class="options">
-    <button class="buttons" style="align-content: flex-end">
-      create new kinship
-    </button>
+      <input class="search" matInput (keyup)="onChange($event.target.value)" placeholder="Search">
+    </mat-form-field>
+    <div class="options">
+    <button class="buttons" style="align-content: flex-end">create new kinship</button>
   </div>
 
-  <mat-paginator
-    [pageSizeOptions]="[10, 15, 20, 25]"
-    showFirstLastButtons
-  ></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[10, 15, 20, 25]" showFirstLastButtons></mat-paginator>
 
-  <mat-table
-    [dataSource]="tableData"
-    matSort
-    matSortDisableClear
-    class="mat-elevation-z8"
-  >
-    <ng-container matColumnDef="1">
-      <mat-header-cell *matHeaderCellDef (click)="orderTable()" mat-sort-header
-        >Titular</mat-header-cell
-      >
-      <mat-cell *matCellDef="let element">
-        {{ element.namePerson }} {{ element.lastNamePerson }}
-      </mat-cell>
-    </ng-container>
+    <mat-table  [dataSource]="tableData" matSort  matSortDisableClear class="mat-elevation-z8">
 
-    <ng-container matColumnDef="2">
-      <mat-header-cell
-        *matHeaderCellDef
-        mat-sort-header
-        (click)="orderTable()"
-        disableClear
-      >
-        Document Titular
-      </mat-header-cell>
-      <mat-cell *matCellDef="let element">
-        {{ element.documentPerson }}
-      </mat-cell>
-    </ng-container>
+      <ng-container matColumnDef="namePerson">
+        <mat-header-cell id="titular" *matHeaderCellDef (click)="orderTable()" mat-sort-header>Titular</mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.namePerson}} {{element.lastNamePerson}} </mat-cell>
+      </ng-container>
 
-    <ng-container matColumnDef="3">
-      <mat-header-cell *matHeaderCellDef (click)="orderTable()" mat-sort-header>
-        Kinship Type
-      </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.kinshipType }} </mat-cell>
-    </ng-container>
+      <ng-container matColumnDef="documentPerson">
+        <mat-header-cell *matHeaderCellDef mat-sort-header (click)="orderTable()" disableClear> Document </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.documentPerson}} </mat-cell>
+      </ng-container>
 
-    <ng-container matColumnDef="4">
-      <mat-header-cell *matHeaderCellDef (click)="orderTable()" mat-sort-header>
-        Relative
-      </mat-header-cell>
-      <mat-cell *matCellDef="let element">
-        {{ element.nameRelative }} {{ element.lastNameRelative }}
-      </mat-cell>
-    </ng-container>
+      <ng-container matColumnDef="kinshipType">
+        <mat-header-cell *matHeaderCellDef mat-sort-header (click)="orderTable()" disableClear> Kinship Type </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.kinshipType}} </mat-cell>
+      </ng-container>
 
-    <ng-container matColumnDef="5">
-      <mat-header-cell
-        *matHeaderCellDef
-        mat-sort-header
-        (click)="orderTable()"
-        disableClear
-      >
-        Document Relative
-      </mat-header-cell>
-      <mat-cell *matCellDef="let element">
-        {{ element.documentRelative }}
-      </mat-cell>
-    </ng-container>
+      <ng-container matColumnDef="nameRelative">
+        <mat-header-cell *matHeaderCellDef (click)="orderTable()" mat-sort-header> Relative </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.nameRelative}} {{element.lastNamePerson}} </mat-cell>
+      </ng-container>
 
-    <ng-container matColumnDef="buttons">
-      <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>
-      <mat-cell *matCellDef="let element">
-        <mat-icon
-          matTooltip="Edit Person"
-          class="icon"
-          (click)="openEdit(element)"
-          >edit</mat-icon
-        >
-        <mat-icon
-          matTooltip="Delete Person"
-          class="icon delete"
-          (click)="delete(element)"
-          >delete_forever</mat-icon
-        >
-      </mat-cell>
-    </ng-container>
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-  </mat-table>
-</section>
+      <ng-container matColumnDef="documentRelative">
+        <mat-header-cell *matHeaderCellDef mat-sort-header (click)="orderTable()" disableClear> Document </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.documentRelative}} </mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="buttons">
+          <mat-header-cell *matHeaderCellDef > Action </mat-header-cell>
+          <mat-cell *matCellDef="let element">
+           <!-- <mat-icon matTooltip="Edit Person" class="icon" (click)="openEdit(element)">edit</mat-icon>
+            <mat-icon matTooltip="Delete Person" class="icon delete" (click)="delete(element)">delete_forever</mat-icon>-->
+          </mat-cell>
+       </ng-container>
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
+  </section>
