--- a/src/app/people/home/home.component.html
+++ b/src/app/people/home/home.component.html
@@ -1,12 +1,11 @@
 <div class="container p-4">
-<h1>Persona</h1>
-<h1 id="pi">π</h1>
-      <div>
-        <p>
-          A register of people, their personal information and the kinship
-          between them, the basic functionalities are CRUD operations for each
-          person and all its kinships.
-        </p>
-      </div>
-
+  <h1>Persona</h1>
+  <h1 id="pi">π</h1>
+  <div>
+    <p>
+      A register of people, their personal information and the kinship between
+      them, the basic functionalities are CRUD operations for each person and
+      all its kinships.
+    </p>
+  </div>
 </div>
