Inspect person's kinships

--- a/src/app/people/inspect/inspect.component.html
+++ b/src/app/people/inspect/inspect.component.html
@@ -87,7 +87,7 @@
   </main>
   <footer>
     <mat-dialog-actions class="cont1">
-      <button mat-raised-button [color]="'list-it'" class="but1">
+      <button mat-raised-button [color]="'list-it'" (click)="openKinship(data)" class="but1">
         List Kinships
       </button>
       <button
