--- a/src/app/people/inspect/inspect.component.html
+++ b/src/app/people/inspect/inspect.component.html
@@ -1,6 +1,6 @@
 <section class="mat-typography container p-2">
-  <div class="row justify-content-between">
-    <h4 style="display:inline-block" class="mat-display-2" mat-dialog-title>
+  <div class="row justify-content-between title-back">
+    <h4  class="mat-display-2 title" mat-dialog-title>
       Person Details
     </h4>
 
@@ -9,7 +9,7 @@
       mat-dialog-close
       aria-label="Example icon-button with a heart icon"
     >
-      <mat-icon>close</mat-icon>
+      <mat-icon>x</mat-icon>
     </button>
   </div>
 
@@ -73,7 +73,7 @@
       >
         Edit
       </button>
-      <button mat-raised-button mat-dialog-close color="warn" class="but3">
+      <button mat-raised-button mat-dialog-close color="warn" (click)="delete(data)" class="but3">
         Delete
       </button>
     </mat-dialog-actions>
