--- a/src/app/people/list/list.component.html
+++ b/src/app/people/list/list.component.html
@@ -3,7 +3,7 @@
     <input class="search" matInput (keyup)="onChange($event.target.value)" placeholder="Search">
   </mat-form-field>
   <div class="options">
-  <button class="buttons" style="align-content: flex-end" (click)="openCreate()">create new</button>
+  <button class="buttons" style="align-content: flex-end" (click)="openCreate()">Create <span>New</span></button>
 </div>
 
   <mat-paginator [pageSizeOptions]="[10, 15, 20, 25]" showFirstLastButtons></mat-paginator>
@@ -12,7 +12,7 @@
 
     <ng-container matColumnDef="1">
       <mat-header-cell id="titular" *matHeaderCellDef (click)="orderTable()" mat-sort-header>Name</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.name}} {{element.lastName}} </mat-cell>
+      <mat-cell class="colum-name" *matCellDef="let element"> {{element.name}} {{element.lastName}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="2">
@@ -20,14 +20,14 @@
       <mat-cell *matCellDef="let element"> {{element.document}} </mat-cell>
     </ng-container>
 
-    <ng-container matColumnDef="3">
-      <mat-header-cell *matHeaderCellDef (click)="orderTable()" mat-sort-header> Document Type </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.documentType}} </mat-cell>
+    <ng-container matColumnDef="3" class="colum-doctype">
+      <mat-header-cell class="colum-doctype" *matHeaderCellDef (click)="orderTable()" mat-sort-header> Document Type </mat-header-cell>
+      <mat-cell class="colum-doctype" *matCellDef="let element"> {{element.documentType}} </mat-cell>
     </ng-container>
 
-    <ng-container matColumnDef="4">
-      <mat-header-cell *matHeaderCellDef (click)="orderTable()" mat-sort-header> Country </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.country}} </mat-cell>
+    <ng-container matColumnDef="4" class="colum-country">
+      <mat-header-cell class="colum-country" *matHeaderCellDef (click)="orderTable()" mat-sort-header> Country </mat-header-cell>
+      <mat-cell class="colum-country" *matCellDef="let element"> {{element.country}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="buttons">
