--- a/src/app/people/list/list.component.scss
+++ b/src/app/people/list/list.component.scss
@@ -1,7 +1,9 @@
 table{
     width: 100%;
 }
-
+.colum-name{
+  text-align: left;
+}
 
 .header {
   padding: 5px;
@@ -27,7 +29,7 @@ mat-form-field{
 }
 
 mat-header-cell, mat-cell {
-  justify-content:center;
+  justify-content:left;
 }
 
 .options{
@@ -41,4 +43,30 @@ mat-header-cell, mat-cell {
   display: inline-block;
 }
 
+@media screen and (min-width: 400px) and (max-width: 767px){
+  .colum-doctype{
+    display: none;
+  }
+}
+@media screen and (min-width: 400px) and (max-width: 500px){
+  .colum-doctype{
+    display: none;
+  }
+  span{
+    display: none;
+  }
+}
 
+
+@media screen and (min-width: 359px) and (max-width: 400px){
+  .colum-doctype{
+    display: none;
+  }
+  .colum-country{
+    display: none;
+  }
+  span {
+    display: none;
+  }
+
+}
