--- a/src/app/kinships/list/listkinship.component.scss
+++ b/src/app/kinships/list/listkinship.component.scss
@@ -40,3 +40,13 @@ margin-left: 6%;
 text-align: right;
 display: inline-block;
 }
+
+@media screen and (min-width: 400px) and (max-width: 767px) {
+  .buttons{
+
+    margin-left: 5%;
+    text-align: center;
+    display: inline-block;
+    margin-bottom: 5px;
+    }
+}
